tests/machine/x/java/group_by_multi_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_multi_join3184512120/001/Main.java:58: error: incompatible types: possible lossy conversion from double to int
				_res7.add(new DataClass4(ps.part, ps.cost * ps.qty));
				                                          ^
Note: /tmp/TestCompileValidProgramsgroup_by_multi_join3184512120/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


  1| let nations = [
  2|   { id: 1, name: "A" },